--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
+    "react-spinners": "^0.15.0",
     "react-transition-group": "^4.4.5",
     "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^4.0.7"
