--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.4.7",
     "firebase": "^11.4.0",
     "framer-motion": "^12.6.3",
+    "intro.js": "^7.2.0",
+    "intro.js-react": "^1.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-draggable": "^4.4.6",
