added equity calc page

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "intro.js": "^7.2.0",
     "intro.js-react": "^1.0.0",
     "lucide-react": "^0.525.0",
+    "pokersolver": "^2.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-draggable": "^4.4.6",
