--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "intro.js": "^7.2.0",
     "intro.js-react": "^1.0.0",
     "lucide-react": "^0.525.0",
+    "phe": "^0.6.0",
+    "poker-hand-evaluator-wasm": "^0.4.0",
     "pokersolver": "^2.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -36,12 +38,16 @@
     "@types/react-dom": "^19.0.3",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "cors": "^2.8.5",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
+    "express": "^5.1.0",
     "globals": "^15.14.0",
+    "morgan": "^1.10.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
+    "undici": "^7.16.0",
     "vite": "^6.1.0"
   }
 }
