SlidingNumber over animatednumber

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,10 @@
     "types": ["vite/client"],
     "strict": true,
     "jsx": "react-jsx",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
