--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.7",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "firebase": "^11.4.0",
     "framer-motion": "^12.6.3",
     "intro.js": "^7.2.0",
     "intro.js-react": "^1.0.0",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.25",
     "phe": "^0.6.0",
     "poker-hand-evaluator-wasm": "^0.4.0",
     "pokersolver": "^2.1.4",
@@ -29,8 +32,11 @@
     "react-router-dom": "^7.4.0",
     "react-spinners": "^0.15.0",
     "react-transition-group": "^4.4.5",
+    "react-use-measure": "^2.1.7",
+    "tailwind-merge": "^3.4.0",
     "tailwind-scrollbar-hide": "^2.0.0",
-    "tailwindcss": "^4.0.7"
+    "tailwindcss": "^4.0.7",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -45,6 +51,7 @@
     "express": "^5.1.0",
     "globals": "^15.14.0",
     "morgan": "^1.10.1",
+    "tw-animate-css": "^1.4.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
     "undici": "^7.16.0",
