--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-spinners": "^0.15.0",
     "react-transition-group": "^4.4.5",
     "react-use-measure": "^2.1.7",
+    "recharts": "^2.15.4",
     "tailwind-merge": "^3.4.0",
     "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^4.0.7",
